--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@
 <p> Hello, this is Ethan Tse I am just writing this so that I can have a so called "website"  </p>
 
  <h3> My journey and why th am I here? </h3>
+<p> GET ME OUT OF HERE!! </p>
