--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@
  <h3> My journey and why th am I here? </h3>
 <p> GET ME OUT OF HERE!! </p>
 <p> gotta hit em with the 😏 ifkyk lolololol </p>
+<h1> Imagine imagining 😲🤯  🎶 You didnt have to cut me off- 🎶 🗣💯 </h1>
